--- a/app/index.html
+++ b/app/index.html
@@ -149,149 +149,22 @@
 			<h4 class="col-12 py-4 text-uppercase text-center">Новое мероприятие</h4>
 		</div>
 		<div class="border">
-			<div style="height: 53px; background-color: #1ebb6c;"></div>
+			<div id="flowBoxes" class="row mx-0" style="height: 53px; background-color: #1ebb6c;">
+		        <div class="col right text-uppercase d-flex align-items-center justify-content-center">1. компания-организатор</div>
+			    <div class="col right text-uppercase d-flex align-items-center justify-content-center"">2. детали мероприятия</div>
+			    <div class="col right text-uppercase d-flex align-items-center justify-content-center"">3. билети/регистрация</div>
+			    <div class="col active text-uppercase d-flex align-items-center justify-content-center"">4. настройки</div>
+			</div>
 			<div class="row-fluid my-4">
 				<div class="col-9 mx-auto p-0">
-					<div class="toggleBar d-flex align-items-center px-2 border-bottom">
+					<div id="content-load-btn" class="toggleBar d-flex align-items-center px-2 border-bottom">
 						<h6 class="text-uppercase m-0 mr-auto">Расписание мероприятия</h6>
 						<svg id="i-chevron-bottom" viewBox="0 0 32 32" width="10" height="10" fill="none" stroke="currentcolor" stroke-linecap="round"
 						 stroke-linejoin="round" stroke-width="2">
 							<path d="M30 12 L16 24 2 12" />
 						</svg>
 					</div>
-					<div class="tabs mt-3">
-						<ul class="nav nav-tabs" id="myTab" role="tablist">
-							<li class="nav-item">
-								<a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">29
-									Мар 2016</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">30
-									Мар 2016</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">31
-									Мар 2016</a>
-							</li>
-						</ul>
-						<div class="tab-content" id="myTabContent">
-							<div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-								<div class="row-fluid border-bottom mt-3 d-flex flex-row">
-									<div class="place-tab border-bottom-0 px-2 py-1 d-flex col-3 justify-content-between">
-										<div class="d-flex flex-column">
-											<p class="m-0 text-uppercase">Место проведения</p>
-											<p class="m-0 text-secondary small">(название / адрес / зал)</p>
-										</div>
-										<svg class="my-1" id="i-edit" viewBox="0 0 32 32" width="12" height="12" fill="none" stroke="currentcolor" stroke-linecap="round"
-										 stroke-linejoin="round" stroke-width="2">
-											<path d="M30 7 L25 2 5 22 3 29 10 27 Z M21 6 L26 11 Z M5 22 L10 27 Z" />
-										</svg>
-									</div>
-									<div class="col-3 d-flex align-items-center">
-										<svg class="text-primary" id="i-location" viewBox="0 0 32 32" width="20" height="20" fill="none" stroke="currentcolor" stroke-linecap="round"
-										 stroke-linejoin="round" stroke-width="2">
-											<circle cx="16" cy="11" r="4" />
-											<path d="M24 15 C21 22 16 30 16 30 16 30 11 22 8 15 5 8 10 2 16 2 22 2 27 8 24 15 Z" />
-										</svg>
-										<p class="m-0 text-primary">Добавить место/зал</p>
-									</div>
-								</div>
-								<div class="container-fluid mt-3">
-									<div class="row align-items-center d-flex">
-										<div class="input-group col-2 p-0">
-											<div class="input-group-prepend">
-												<span class="input-group-text" id="basic-addon1">
-													<svg id="i-clock" viewBox="0 0 32 32" width="20" height="20" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round"
-													 stroke-width="2">
-														<circle cx="16" cy="16" r="14" />
-														<path d="M16 8 L16 16 20 20" />
-													</svg>
-												</span>
-											</div>
-											<input class="form-control px-1 text-center" type="time" id="time-input">
-										</div>
-										<span class="mx-2 d-flex align-items-center">-</span>
-										<input class="form-control col-1 px-1 text-center" type="time" id="time-input">
-										<input class="form-control col-8 ml-2" type="text" placeholder="Название / тема выступления">
-										<svg class="text-danger ml-1" id="i-close" viewBox="0 0 32 32" width="10" height="10" fill="none" stroke="currentcolor" stroke-linecap="round"
-										 stroke-linejoin="round" stroke-width="2">
-											<path d="M2 30 L30 2 M30 30 L2 2" />
-										</svg>
-									</div>
-									<div class="row">
-										<div class="d-flex align-items-center text-primary col-2 pl-1">
-											<svg id="i-user" viewBox="0 0 32 32" width="12" height="12" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round"
-											 stroke-width="2">
-												<path d="M22 11 C22 16 19 20 16 20 13 20 10 16 10 11 10 6 12 3 16 3 20 3 22 6 22 11 Z M4 30 L28 30 C28 21 22 20 16 20 10 20 4 21 4 30 Z"
-												/>
-											</svg>
-											<p class="m-0 mx-1 border-bottom"><small>Спикер</small></p>
-											<svg id="i-chevron-bottom" viewBox="0 0 32 32" width="10" height="10" fill="none" stroke="currentcolor" stroke-linecap="round"
-											 stroke-linejoin="round" stroke-width="2">
-												<path d="M30 12 L16 24 2 12" />
-											</svg>
-										</div>
-										<div class="col-8 d-flex align-items-center text-primary ">
-											<p class="m-0"><small>Регистрация</small></p>
-											<span class="mx-2 text-muted">|</span>
-											<p class="m-0"><small>Кофе брэйк</small></p>
-											<span class="mx-2 text-muted">|</span>
-											<p class="m-0"><small>Обед</small></p>
-											<span class="mx-2 text-muted">|</span>
-											<p class="m-0"><small>Афтепати</small></p>
-										</div>
-									</div>
-									<div class="row download-background d-flex align-items-center flex-md-row flex-column mt-3">
-										<div class="drop-area col-md-3 col-12 py-5">
-											<form id="dropContainer" class="my-form">
-												<input class="file-input" type="file" id="fileBackground">
-												<label class="button labelFile d-flex flex-column align-items-center text-center" for="fileBackground">
-													<img src="img/camera-icon.png" style="height: 36px; width: 36px;" />
-													<span class="text-uppercase">Добавить фото</span>
-												</label>
-											</form>
-										</div>
-										<div class="col-md col-12 mt-md-0 mt-3 p-md-2 p-0">
-											<div class="download-requirements-text d-flex">
-												<span class="inline mx-1 text-danger">*</span>
-												<p>Рекомендованный размер <b>170х170px</b> (1:1)<br/> (форматы .jpg .jpeg .png .gif размером до 2 Мб)
-												</p>
-											</div>
-										</div>
-									</div>
-									<div class="row mt-3 d-flex justify-content-between">
-										<input class="form-control w-47" type="text" placeholder="ФИО спикера">
-										<input class="form-control w-47" type="text" placeholder="Компания, должность">
-									</div>
-									<div class="row mt-3 d-flex justify-content-between">
-										<textarea class="form-control w-47" id="exampleTextarea" rows="3" placeholder="О спикере"></textarea>
-										<div class="w-47 d-flex flex-column justify-content-between">
-											<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-												<div class="input-group-addon"><img class="h-100 w-100" src="./img/facebook-link-logo.png" alt="fb-logo"></div>
-												<input type="text" class="form-control h-100" id="inlineFormInputGroup" placeholder="Ссылка на акаунт в Facebook">
-											</div>
-											<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-												<div class="input-group-addon"><img class="h-100 w-100" src="./img/twitter-link-logo.png" alt="tw-logo"></div>
-												<input type="text" class="form-control h-100" id="inlineFormInputGroup" placeholder="Ссылка на акаунт в Twitter">
-											</div>
-										</div>
-									</div>
-									<div class="row">
-										<button type="button" class="btn btn-outline-primary col-4 mt-4 d-flex align-items-center justify-content-between">
-											<svg id="i-plus" viewBox="0 0 32 32" width="15" height="15" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round"
-											 stroke-width="2">
-												<path d="M16 2 L16 30 M2 16 L30 16" />
-											</svg>
-											Добавить елемент расписания</button>
-									</div>
-									<div class="row">
-										<p class="col-4 text-center text-muted"><small>(выступление, доклад, перерыв и т.д)</small></p>
-									</div>
-								</div>
-							</div>
-							<div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">Add your information here</div>
-						</div>
-					</div>
+					<div id="content-to-load"></div>
 				</div>
 			</div>
 
@@ -307,6 +180,14 @@
 	 crossorigin="anonymous"></script>
 	<script src="js/libs.min.js"></script>
 	<script src="js/bootstrap-colorpicker.js"></script>
+
+	<script>
+		$(document).ready(function(){
+		    $("#content-load-btn").click(function(){
+		        $("#content-to-load").load("content.html");
+		    });
+		});
+	</script>
 </body>
 
 </html>
